<resources>
    <string name="app_name">MovieHunter</string>
    <!-- Dummy strings -->
    <string name="lorem_3XL">Modification, history, and death.Vogon of a seismic procedure, observe the
        x-ray vision!Pattern at the alpha quadrant was the assimilation of ellipse, lowered to a unrelated girl.
        The apocalyptic girl impressively attacks the hur\'q.Teleporters resist from paralysis like gravimetric suns.</string>
    <string name="lorem_2XL">Modification, history, and death.Vogon of a seismic procedure, observe the
        x-ray vision!Pattern at the alpha quadrant was the assimilation of ellipse, lowered to a unrelated girl.
        The apocalyptic girl impressively attacks the hur\'q.</string>
    <string name="lorem_XL">Modification, history, and death.Vogon of a seismic procedure, observe the x-ray
        vision!Pattern at the alpha quadrant was the assimilation of ellipse, lowered to a unrelated girl.</string>
    <string name="lorem_L">Modification, history, and death.Vogon of a seismic procedure, observe the x-ray vision!</string>
    <string name="lorem_M">Modification, history, and death.</string>
    <string name="lorem_S">History, and death.</string>
    <string name="lorem_XS">History.</string>
    <string name="lorem_CHAR">H</string>

    <!-- Bottom navigation icon strings -->
    <string name="menu_home">Ana Ekran</string>
    <string name="menu_search">Ara</string>
    <string name="menu_downloads">İndirilenler</string>
    <string name="menu_upcoming">Yakında</string>
    <string name="menu_others">Diğer</string>

    <string name="others_screen">Diğer</string>
    <string name="to_list">Listeye Ekle</string>
    <string name="share">Paylaş</string>
    <string name="similar_movies">Benzer Filmler</string>
    <string name="play">Oynat</string>
    <string name="info">Bilgi</string>
    <string name="my_list">Listem</string>
    <string name="settings">Ayarlar</string>
    <string name="dark_mode">Koyu Tema</string>
    <string name="delete_downloads">İndirilenleri Sil</string>
    <string name="about">Geliştirici Hakkında</string>

    <string name="popular_movies">Popüler Filmler</string>
    <string name="top_rated_movies">En Çok Oy Alan Filmler</string>
    <string name="download">İndir</string>
    <string name="turkish">TUR</string>
    <string name="english">ENG</string>
    <string name="about_me">Bu sayfada benim ile ilgili bazı bilgiler elde edebilirsiniz :) \nŞu an
        Bilgisayar mühendisliği alanında lisans öğrenimime devam ederken ING\'de Android Geliştiricisi olarak
        çalışıyorum. Yeni teknolojileri öğrenmeyi ve onları uygulamalarla
        deneyimlemeyi seviyorum. </string>
    <string name="welcome">Merhaba!</string>
    <string name="android">Android</string>
    <string name="kotlin">Kotlin</string>
    <string name="java">Java</string>
    <string name="spring_boot">Spring Boot</string>
    <string name="techs_enjoy">Kullanmaktan Zevk Aldığım Teknolojiler</string>
    <string name="contact_with_me">Bana Ulaşabileceğiniz Adresler</string>
    <string name="visit_my_linkedin_account">Linkedin Hesabımı Ziyaret Edin</string>
    <string name="visit_my_website">Websitemi Ziyaret Edin</string>
    <string name="visit_my_github_account">Github Hesabımı Ziyaret Edin</string>
    <string name="open_my_resume_in_mid_2022">CV\'mi İncelemek İçin (2022 Ortası)</string>
    <string name="no_content">Okuma İzni Verdiğinizden ve Video İndirdiğinizden Emin Olun!</string>

</resources>