<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/upcomingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/menu_upcoming" />
    <item
        android:id="@+id/downloadsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_download"
        android:title="@string/menu_downloads" />
    <item
        android:id="@+id/othersFragment"
        android:enabled="true"
        android:icon="@drawable/ic_others"
        android:title="@string/menu_others" />
</menu>