<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/stroke_color"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/dummy_poster" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPlayButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/imgShareButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_share" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            tools:text="@string/lorem_M" />

        <TextView
            android:id="@+id/tvOverview"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            tools:text="@string/lorem_XL" />

        <TextView
            android:id="@+id/tvCategories"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            tools:text="@string/lorem_S" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>